--- a/templates/user_menu.html
+++ b/templates/user_menu.html
@@ -24,10 +24,18 @@
     />
 
     <!-- Styles -->
-    <link rel="stylesheet" href="{% static 'assets/css/user_global.css' %}?v=20251017a">
-<link rel="stylesheet" href="{% static 'assets/css/user_header.css' %}?v=20251017a">
-<link rel="stylesheet" href="{% static 'assets/css/user_menu.css' %}?v=20251017a">
-
+    <link
+      rel="stylesheet"
+      href="{% static 'assets/css/user_global.css' %}?v=20251017a"
+    />
+    <link
+      rel="stylesheet"
+      href="{% static 'assets/css/user_header.css' %}?v=20251017a"
+    />
+    <link
+      rel="stylesheet"
+      href="{% static 'assets/css/user_menu.css' %}?v=20251017a"
+    />
 
     <!-- Scripts -->
     <script src="{% static 'js/menu.js' %}" defer></script>
