--- a/templates/user_equipment.html
+++ b/templates/user_equipment.html
@@ -12,7 +12,7 @@
       type="image/png"
     />
     <link rel="stylesheet" href="{% static 'assets/css/global.css' %}" />
-    <link rel="stylesheet" href="{% static 'assets/css/user_header.css' %}" />
+    <link rel="stylesheet" href="{% static 'assets/css/header_equipment.css' %}" />
     <link
       rel="stylesheet"
       href="{% static 'assets/css/user_equipment.css' %}"
