--- a/templates/equipment_return.html
+++ b/templates/equipment_return.html
@@ -12,7 +12,10 @@
       type="image/png"
     />
     <link rel="stylesheet" href="{% static 'assets/css/global.css' %}" />
-    <link rel="stylesheet" href="{% static 'assets/css/header_equipment.css' %}" />
+    <link
+      rel="stylesheet"
+      href="{% static 'assets/css/header_equipment.css' %}"
+    />
     <link
       rel="stylesheet"
       href="{% static 'assets/css/equipment_return.css' %}"
