แก้หน้า เพิ่มรายการอุปกรณ์กีฬา

--- a/templates/staff_equipment.html
+++ b/templates/staff_equipment.html
@@ -163,6 +163,15 @@
           type="text"
           placeholder="เพิ่มรายการ (เช่น ลูกบอล, ไม้แบด, ฯลฯ)"
         />
+
+        <input
+          id="equipStock"
+          type="number"
+          min="0"
+          placeholder="Stock (เพื่อจำนวน สต็อก)"
+          value="10"
+          style="width: 170px"
+        />
         <button id="btnAdd" class="btn success">
           <span class="icon">＋</span> เพิ่ม
         </button>
